--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
-  "name" : "skel/",
-  "description" : "",
+  "name" : "skel/skel-blog-beta",
+  "description" : "This is a meta-package that comprises the official Skel implementations of the Skel Framework Interfaces pertinent to building a basic blog. It will update for every library release in the beta phase of development. See https://skel.kaelshipman.me for more information on the Skel Framework.",
   "type" : "library",
-  "keywords" : [""],
+  "keywords" : ["blog", "framework", "platform", "cms"],
   "license" : "GPL3",
   "authors" : [
     {
@@ -13,9 +13,15 @@
     }
   ],
   "require" : {
-    "php" : ">=5.6"
+    "php" : ">=5.0",
+    "skel/header" : "~0.0",
+    "skel/app" : "~0.0",
+    "skel/db" : "~0.0",
+    "skel/cms" : "~0.0",
+    "skel/config" : "~0.0",
+    "skel/routing" : "~0.0"
   },
   "require-dev" : {
-    "phpunit/phpunit" : "~5"
+    "phpunit/phpunit" : "~5.0"
   }
 }
