--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,9 @@
     "skel/db" : "~0.0",
     "skel/cms" : "~0.0",
     "skel/app" : "~0.0",
-    "skel/routing" : "~0.0"
+    "skel/routing" : "~0.0",
+    "skel/factory" : "~0.0",
+    "skel/lang-parser" : "~0.0"
   },
   "require-dev" : {
     "phpunit/phpunit" : "~5.0"
